test_outputs/connlist/example_policy_blocking_ingress_connlist_output.txt
0.0.0.0-255.255.255.255 => default/banana-app[Pod] : All Connections
default/apple-app[Pod] => 0.0.0.0-255.255.255.255 : All Connections
default/apple-app[Pod] => default/banana-app[Pod] : All Connections
default/banana-app[Pod] => 0.0.0.0-255.255.255.255 : All Connections
{ingress-nginx} => default/banana-app[Pod] : TCP 5678
{openshift-ingress-operator} => default/banana-app[Pod] : TCP 5678
